--- a/EconHist-Assignment1.html
+++ b/EconHist-Assignment1.html
@@ -1723,7 +1723,8 @@ dividends. In other words, it should reflect the share of agents’ income
 that depends on the stockmarket since the dividends corresponds to the
 reward of holdings assets. Thus, fluctuations in the stock market will
 affect dividends, which will in turn affect income and consumption.</p>
-<pre><code>##7. </code></pre>
+<pre><code>##7. Explain the idea behind the regression.
+What are the identification concerns.</code></pre>
 <p>Reg (1): studies effect of stock market crash on consumption at state
 level by using state-level car sales as a proxy. <span class="math inline">\(x_s\)</span> (independent variable) captures the
 exposure of state incomes to fluctuations in the stock market; computed
